# Multi_Agent_AI

./: .dockerignore  .gitignore  .netlifyignore  .vercelignore  Dockerfile  README.md  app.py  classifier.py  main.py  predeploy-check.ps1  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py  vercel.json
agents/: __init__.py  classifier_agent.py  email_agent.py  insights_agent.py  json_agent.py  pdf_agent.py
memory/: __init__.py  shared_memory.py
public/: index.html
samples/: sample_email.txt
tests/: test_email_agent_bug16.py
utils/: __init__.py  file_loader.py  intent_detector.py
